# pylon_data_extractor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pylon_data_extract.yml
config/: create_int_tables.sql
src/: __init__.py  bigquery_utils.py  classifier.py  config.py  main.py  prompts.py  pylon_client.py  replicator.py  ticket_closer.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_pylon_client.py  test_replicator.py
